fixing width on firefox omg i am a terrible fre

--- a/letterstocrushes.UI/Content/style.css
+++ b/letterstocrushes.UI/Content/style.css
@@ -211,7 +211,7 @@ ul.letterNav li
 {
     float: right;
     font-size: 12px;
-    width: 55px;
+    width: 65px;
     text-align: right;
 }
 
